Fix overlapping issues in both schedule.html and contact.html pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,7 +280,6 @@ div li {
     padding: 2%;
     padding-top: 10%;
     position: relative;
-    top: 11%;
     border-collapse: collapse;
     font-size: 100%;
 }
@@ -327,6 +326,7 @@ td {
     width: 100%;
     background: url('../images/yogapracticenamaste.webp') no-repeat center top;
     background-size: cover;
+    margin-top: 61px;
 }
 
 form {
@@ -385,38 +385,25 @@ legend {
 .contact-container {
     background-color: rgba(54, 54, 54, 0.459);
     font-size: 115%;
-    margin: 5%;
-    margin-top: 12.5%;
-    margin-bottom: 10%;
     padding: 4%;
     border-radius: 15px;
     color: #ffffff;
-    height: 30%;
+    height: 35%;
     width: 20%;
-    display: inline-flex;
+    align-content: center;
     text-align: center;
-    position: absolute;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: center;
 }
 
 .main-photo-contact {
-    height: 770px;
-    background: url('../images/yogapracticenamaste.webp') no-repeat center top;
-    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 82px;
 }
 
-#address {
-    left: 32%;
-}
-
-#address-text {
-    padding: 2%;
-}
-
-#qanda {
-    left: 64%;
-    font-size: 105%;
+.main-photo-schedule {
+    margin-top: 82px;
 }
 
 .summary {
@@ -624,21 +611,8 @@ ul .social-platforms {
         background-size: cover;
     }
 
-    #main-photo {
-        background-size: cover;
-    }
-
     #form {
         padding-top: 0.5%;
-    }
-
-    .contact-container {
-        height: 300px;
-        margin-top: 7.5%;
-    }
-
-    #schedule {
-        top: 10%;
     }
 
 }
@@ -679,6 +653,10 @@ ul .social-platforms {
         background: url('../images/yogapracticenamaste.webp') no-repeat center top;
     }
 
+    .main-photo-contact {
+        margin-top: 81px;
+    }
+
     div #intro-box {
         width: 40%;
         left: 120px;
@@ -695,12 +673,6 @@ ul .social-platforms {
 
     #map {
         width: 300px;
-    }
-
-    .contact-container {
-        padding: 3%;
-        margin-top: 12%;
-        height: 300px;
     }
 
     #thankyou-container {
@@ -720,6 +692,15 @@ ul .social-platforms {
         background: url('../images/yogapracticenamaste.webp') no-repeat center top;
     }
 
+    .main-photo-contact {
+        margin-top: 82px;
+        margin-bottom: 20px;
+    }
+
+    .main-photo-schedule {
+        margin-bottom: 17px;
+    }
+
     div #intro-box {
         width: 42%;
         left: 100px;
@@ -736,11 +717,6 @@ ul .social-platforms {
 
     #map {
         width: 250px;
-    }
-
-    .contact-container {
-        padding: 2%;
-        margin-top: 17%;
     }
 }
 
@@ -769,7 +745,7 @@ ul .social-platforms {
     }
 
     #form-container {
-        transform: translate(0%, 33%);
+        transform: translate(0%, 31%);
     }
 
     fieldset {
@@ -778,11 +754,6 @@ ul .social-platforms {
 
     #map {
         width: 250px;
-    }
-
-    .contact-container {
-        padding: 2%;
-        margin-top: 17%;
     }
 
     #thankyou-container {
@@ -837,10 +808,27 @@ ul .social-platforms {
         width: 250px;
     }
 
+    .main-photo-contact {
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: column;
+        margin-bottom: 24px;
+    }
+
     .contact-container {
-        padding: 1%;
-        margin-top: 25%;
-        width: unset;
+        width: 70%;
+        height: 150px;
+        font-size: 90%;
+        padding: 4%;
+    }
+
+    #fqa-header {
+        padding: 3% 0% 3% 0%;
+    }
+
+    .fa-whatsapp {
+        padding: 0;
+        margin: 0;
     }
 
     .teacher-photo {
@@ -969,44 +957,22 @@ ul .social-platforms {
     }
 
     .contact-container {
-        padding: 1%;
-        width: unset;
-        bottom: 35%;
-    }
-
-    #qanda {
-        position: relative;
-        top: 41%;
-        left: 1%;
-    }
-
-    #address {
-        left: unset;
-        left: 42%;
-        height: 200px;
-    }
-
-    #contact {
-        right: 55%;
-        height: 200px;
+        padding: 5%;
     }
 
     #map {
-        width: 80%;
         height: 100px;
-        padding-left: 25px;
-        padding-right: 15px;
-    }
-
-    #all-contact {
-        margin-top: 15px;
     }
 
     #schedule {
         width: 100%;
         font-size: 64%;
         height: 100%;
-        top: 10.4%;
+    }
+
+    .main-photo-schedule {
+        margin-bottom: 33px;
+        margin-top: 81px;
     }
 
     .table-header {
@@ -1038,29 +1004,6 @@ ul .social-platforms {
 
     #form-container {
         transform: translate(0%, 32%);
-    }
-
-    .contact-container,
-    #qanda {
-        font-size: 80%;
-    }
-
-    .contact-container {
-        margin-top: 37%;
-    }
-
-    #address,
-    #contact {
-        bottom: 23%;
-    }
-
-    #contact {
-        width: 200px;
-    }
-
-    #qanda {
-        top: 40%;
-        font-size: 80%;
     }
 }
 
@@ -1101,6 +1044,13 @@ ul .social-platforms {
         height: 670px;
         background: url('../images/yogapracticenamaste.webp') no-repeat center top;
         background-size: cover;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
+    .main-photo-schedule {
+        margin-top: 0;
+        margin-bottom: 0;
     }
 
     div #intro-box {
@@ -1172,10 +1122,11 @@ ul .social-platforms {
     }
 
     #main-photo-form {
-        height: 470px;
+        height: 620px;
         width: 100%;
         background: url('../images/yogapracticenamaste.webp') no-repeat right top;
         background-size: cover;
+        margin-top: 0;
     }
 
     form {
@@ -1185,10 +1136,11 @@ ul .social-platforms {
         color: #ffffff;
         position: absolute;
         z-index: 3;
+        padding-top: 17.5%;
     }
 
     #form-container {
-        transform: translate(0%, 11%);
+        transform: translate(0%, 29%);
         height: auto;
     }
 
@@ -1214,37 +1166,10 @@ ul .social-platforms {
         text-align: center;
     }
 
-    #all-contact {
-        margin-top: 15px;
-        display: flex;
-        flex-direction: column;
-    }
-
     #map {
         left: unset;
         padding-left: 20px;
         padding-right: 20px;
-    }
-
-    .contact-container {
-        font-size: 70%;
-        bottom: 36%;
-    }
-
-    #contact {
-        bottom: 50%;
-        height: 170px;
-        width: 130px;
-    }
-
-    #address {
-        height: 170px;
-        bottom: 50%;
-    }
-
-    #qanda {
-        top: 197px;
-        max-height: 150px;
     }
 
     #schedule {
@@ -1297,22 +1222,12 @@ ul .social-platforms {
         left: 5%;
     }
 
-    #contact {
-        height: 157px;
-        width: 130px;
-        right: 51%;
-    }
-
-    #address {
-        height: 157px;
-    }
-
-    #qanda {
-        left: 0;
-    }
-
     .error {
         height: 303px;
+    }
+
+    #map {
+        padding: 1px;
     }
 }
 
@@ -1340,25 +1255,19 @@ ul .social-platforms {
         width: 230px;
     }
 
-    #contact {
-        right: 50%;
-        height: 140px;
-        top: 0;
-    }
-
-    #address {
-        height: 140px;
-        top: 0;
-        padding-left: 2px;
-        padding-right: 2px;
-    }
-
-    #qanda {
-        bottom: 0;
-        left: 0;
-    }
-
     .error {
         height: 314px;
+    }
+
+    #map {
+        width: 200px;
+    }
+
+    .main-photo-contact {
+        margin-top: 24px;
+    }
+
+    .contact-container {
+        padding: 23px;
     }
 }
